@@ -9,7 +9,6 @@
 
 	<li>Enhancements
 	<ul>
-		<li>warn when deleting superuser privilege
 		<li>Display server log
 		<li>Keyboard navigation (wx issue)
 		<li>function property: show line number
